Add chicken_thighs page
finished recipe for saag and added chicken_thighs
page

--- a/recipes/saag.html
+++ b/recipes/saag.html
@@ -8,5 +8,34 @@
 <body>
     <h1>Saag</h1>
     <a href="../index.html"> Home</a>
+
+    <img src="https://www.allrecipes.com/thmb/_DMXtOPNCRdYL0ycGA3H_A82V-g=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/64066-IndianSaag-mfs-2X3-0315-192f50ce75064f2b9cc1a6087aec0807.jpg" alt="Delicious Saag">
+    <h2>Description</h2>
+    <p>Saag is an indian spinach dish. It has spices and is very tasty.
+        you can make it at home by following this recipe.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Spinach</li>
+        <li>Cream</li>
+        <li>Onion</li>
+        <li>tomatoes</li>
+        <li>Garlic</li>
+        <li>Cumin</li>
+        <li>Coriander</li>
+        <li>Tumeric</li>
+
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Start by dicing and pan frying the onion and garlic</li>
+        <li>add spices. cook until fragrant</li>
+        <li>add the tomatoes. cook for 10 minutes</li>
+        <li>add the spinach. add some water, cook until spinach cooks down.</li>
+        <li>use an immersion blender to blend up the spinach a bit</li>
+        <li>add cream to taste</li>
+        <li>serve with rice or naan</li>
+    </ol>
 </body>
 </html>
