--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/saag.html"></a>
+    <a href="recipes/saag.html">Saag</a>
+    <a href=""></a>
 </body>
 </html>
