add ice_cream page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/saag.html">Saag</a>
-    <a href=""></a>
+    <ul>
+        <li><a href="recipes/saag.html">Saag</a></li>
+        <li><a href="recipes/chicken_thighs.html">Chicken Thighs</a></li>
+        <li><a href="recipes/ice_cream.html">Ice Cream</a></li>
+    
+    </ul>
+   
 </body>
 </html>
